--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-        url: "https://github.com/Max-Rubino"
+      # url: "https://github.com/Max-Rubino"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -132,7 +132,7 @@ footer:
       # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-        url: "https://github.com/Max-Rubino"
+      # url: "https://github.com/Max-Rubino"
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
